--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <aspectj-version>1.7.1</aspectj-version>
         <hapi-version>2.3</hapi-version>
         <jackson-version>2.12.2</jackson-version>
+        <jaxb-version>2.3.0</jaxb-version>
         <poi-version>4.1.0</poi-version>
         <slf4j-version>1.7.2</slf4j-version>
         <spring-version>4.3.8.RELEASE</spring-version>
@@ -247,6 +248,20 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
                 <version>${spring-security-version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- Other Libraries -->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-version}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
