--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <jaxb-version>2.3.0</jaxb-version>
         <poi-version>4.1.0</poi-version>
         <slf4j-version>1.7.2</slf4j-version>
+        <log4j-version>1.2.17</log4j-version>
         <spring-version>4.3.8.RELEASE</spring-version>
         <spring-security-version>4.2.2.RELEASE</spring-security-version>
         <spring-data-version>1.4.0.RELEASE</spring-data-version>
@@ -262,6 +263,12 @@
                 <groupId>org.glassfish.jaxb</groupId>
                 <artifactId>jaxb-runtime</artifactId>
                 <version>${jaxb-version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j-version}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
