--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <!-- Dependency versions -->
         <aspectj-version>1.7.1</aspectj-version>
         <hapi-version>2.3</hapi-version>
+        <hibernate-version>4.3.11.Final</hibernate-version>
         <jackson-version>2.12.2</jackson-version>
         <jaxb-version>2.3.0</jaxb-version>
         <poi-version>4.1.0</poi-version>
@@ -36,6 +37,11 @@
         <spring-security-version>4.2.2.RELEASE</spring-security-version>
         <spring-data-version>1.4.0.RELEASE</spring-data-version>
         <spring-data-jpa-version>1.2.0.RELEASE</spring-data-jpa-version>
+
+        <!-- Test dependency version -->
+        <junit-version>5.9.2</junit-version>
+        <assertj-version>3.24.2</assertj-version>
+        <mockito-version>4.11.0</mockito-version>
     </properties>
 
     <dependencyManagement>
@@ -270,6 +276,44 @@
                 <artifactId>log4j</artifactId>
                 <version>${log4j-version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- Test dependencies -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit-version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj-version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito-version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito-version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j-version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
